2.0.1

  * Improved display of paths with correct paths separators 
  * Fixed storage of XML special characters in parameters when saving
    in .fluidx files    
  * Fixed resizing problems
  * Fixed crash in spatial import extension when missing 
    filename extension in selected file to import



2.0.0

  * Updated simulation engine for variable time coupling, 
    including scheduling system with constraints
  * Added monitoring system with observers 
  * Removed deprecated results output system
  * Added observers for exporting simulation results to csv files, 
    kml/kmz files (Google Earth), GNUplot charts, dot graphs
  * Added the openfluid-landr library for spatial data processing
  * Added raster spatial data as accepted data for the datastore
  * Renamed simulation functions into simulators
  * Renamed spatial inputdata into attributes 
    (according to the OGC reference model)
  * Renamed openfluid-engine command line program to openfluid
  * Updated and improved data generators
  * Added CMake OpenFLUID module
  * Added CMake macros for easier build of simulators and observers
  * Redesigned and improved simulators signatures macros
  * Redesigned simulators C++ class for robustness improvement
  * Provided new examples projects, with easy access from OpenFLUID-Builder
  * Provided OpenFLUID-Builder extensions for spatial graph view 
    and spatial data import
  * Redesigned model and monitoring tabs in OpenFLUID-Builder
  * Updated binary names of OpenFLUID plugins (simulators and observers)
  * Improved OpenFLUID plugins recognition and management system
  * Removed pass-by-pointer values in OPENFLUID_* primitives
  * Added OPENFLUID_* primitives for accessing variables in many ways
  * Improved checking of primitives usage regarding the current 
    simulation stage 
  * Updated standard fields names for external spatial data
  * Added observers and datasets as packages for OpenFLUID-market deployment
    system