@@ -137,7 +137,7 @@ SET(CUSTOM_CMAKE_VERSION "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_
 SET(VERSION_MAJOR 2)
 SET(VERSION_MINOR 0)
 SET(VERSION_PATCH 1)
-SET(VERSION_STATUS "beta3") # example: SET(VERSION_STATUS "rc1")
+SET(VERSION_STATUS "rc1") # example: SET(VERSION_STATUS "rc1")
 
 SET(FULL_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 
